# mpi

./: Main.hs  README  mpi.cabal
src/: Matrix.hs
