name:                mpi
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              Fraser Murray
maintainer:          fraser.m.murray@gmail.com
build-type:          Simple
cabal-version:       >=1.10

executable mpi
  main-is:             Main.hs
  ghc-options:         -Wall
  default-extensions:
    StandaloneDeriving
    DeriveGeneric
    GeneralizedNewtypeDeriving
  build-depends:
    base == 4.7.*,
    cereal == 0.4.0.*,
    haskell-mpi == 1.3.*,
    matrix == 0.3.*,
    vector == 0.10.*
  hs-source-dirs:
    ./,
    src/
  default-language:    Haskell2010
